# FCLC-public

./: .gitignore  AGENTS.md  CLAUDE.md  COMPLIANCE.md  CONCEPT.md  Cargo.toml  DESIGN.md  EVIDENCE.md  GRANT_TRACKER.md  KNOWLEDGE.md  LINKS.md  MAP.md  MEMORY.md  OPEN_PROBLEMS.md  PARAMETERS.md  README.md  REMINDER.md  THEORY.md  TODO.md  UPGRADE.md
_archive/: DEEP_AUDIT_2026-04-21.md
backend/: Cargo.toml
docs/: ANALYSIS_v1.md  CONCEPT_EN.md  CONCEPT_REVIEWED.md  CORRECTION_CANDIDATES.md  DATASETS.md  DUA_template.md  FCLC_CONCEPT_review.md  IRB_protocol_template.md  META_ANALYSIS_FCLC.md  PEER_REVIEW_FCLC.md  REFERENCE_AUDIT_FCLC.md  SERVER_DEPLOYMENT_2026-04-26.md  TRUE_MISMATCHES_FCLC.md
docs/20260407_BCN-AIM_Kickoff_Meeting/: CONCEPT_NOTE_v6.0.md  MEETING_AGENDA_20260407.md  README.md
docs/literature_daily/: PUBMED_FCLC_2026-04-18.md  PUBMED_FCLC_2026-04-19.md
e-mails/: email_lekadir_carlos_apr7.md
fclc-core/: Cargo.toml
fclc-core/src/: lib.rs  model.rs
fclc-core/src/aggregation/: mod.rs
fclc-core/src/dp/: mod.rs  renyi.rs
fclc-core/src/privacy/: mod.rs
fclc-core/src/schema/: mod.rs
fclc-core/src/scoring/: mod.rs
fclc-core/tests/: integration_round.rs
fclc-demogen/: Cargo.toml
fclc-demogen/src/: main.rs
fclc-node/src/: app.rs
fclc-node/src/client/: mod.rs
fclc-node/src/pipeline/: mod.rs
fclc-server/src/: main.rs  models.rs  state.rs
fclc-server/src/db/: mod.rs
fclc-server/src/orchestrator/: mod.rs
fclc-server/src/routes/: metrics.rs  nodes.rs  updates.rs
fclc-web/lib/fclc_web_web/live/: dashboard_live.ex
