[package]
name = "fclc-demogen"
version = "0.1.0"
edition = "2021"
description = "FCLC synthetic demo data generator. Rust port of scripts/generate_demo_data.py."

[[bin]]
name = "fclc-demogen"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
anyhow = "1"
